# ICTAssignments

BootLoader/: index.html  test.html
ICT Term 2 Website/: dashboard.php  index.html  register.html  timeTable.html
ICT Term 2 Website/css/: main.css
ICT Term 2 Website/js/: sidebar.min.js
ICT Term 2 Website/webasm/: ICTTerm2Rev22021.js  ICTTerm2Rev22021_bg.wasm
WebAssembly/: .gitignore  Cargo.toml
WebAssembly/.cargo/: config.toml
WebAssembly/src/: gl.rs  lib.rs  utils.rs
WebAssembly/src/model/: model.rs
WebAssembly/src/render/: mod.rs  model.rs  renderer.rs
WebAssembly/src/shader/: Shader.rs  mod.rs  shader.rs  uniform.rs
WebAssembly/src/shaders/: simple.v.glsl
