[package]
name = "ICTTerm2Rev22021"
version = "0.1.0"
authors = ["hYdos <haydenv06@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.51"
wasm-bindgen = "0.2.74"
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGlRenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'Window',
]

wee_alloc = { version = "0.4.5", optional = true }

[profile.release]

# Tell `rustc` to optimize for small code size.
opt-level = "s"
