[package]
name = "term_4_app_game"
description = "An app/game based on a certian Capture the Flag game I play."
license = "CC0 (Assets are ARR & Owned by Valve)"
repository = "github.com/hYdos/ICTAssignments/"
version = "0.0.1"
authors = ["hYdos <haydenv06@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.51"
wasm-bindgen = "0.2.78"
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGlRenderingContext',
    'WebGlProgram',
    'WebGlUniformLocation',
    'WebGlShader',
    'Window',
]

wee_alloc = { version = "0.4.5", optional = true }

[profile.release]

# Tell `rustc` to optimize for small code size.
opt-level = "s"
